--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,21 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Emacs-Run-ExtractDocs
-version:      0.01
-version_from: lib/Emacs/Run/ExtractDocs.pm
-installdirs:  site
-requires:
-    Carp:                          0
-    Class::Base:                   0
-    Cwd:                           0
-    Data::Dumper:                  0
-    Date::Calc:                    0
-    Emacs::Run:                    0.03
-    Env:                           0
-    Fatal:                         0
-    File::Basename:                0
-    File::Copy:                    0
-    File::Path:                    0
-    FindBin:                       0
-    Hash::Util:                    0
-    Test::Differences:             0
-    Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+---
+name: Emacs-Run-ExtractDocs
+version: 0.02
+author:
+  - 'Joseph Brenner <doom@kzsu.stanford.edu>'
+abstract: extract elisp docstrings to html form
+license: perl
+resources:
+  license: http://dev.perl.org/licenses/
+build_requires:
+  Test::More: 0
+configure_requires:
+  Module::Build: 0.35
+provides:
+  Emacs::Run::ExtractDocs:
+    file: lib/Emacs/Run/ExtractDocs.pm
+    version: 0.02
+generated_by: Module::Build version 0.35
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
